# BoidsOpenGLlilni

./: .gitignore  CMakeLists.txt  README.md
TP1/: main.cpp
TP1_exo1_triangle_blanc/: main.cpp
TP1_exo2_triangle_couleurs/: main.cpp
TP2/: main.cpp
TP3/: main.cpp
TP3_exo1_triangle_blanc/: main.cpp
TP3_exo2_triangle_couleurs/: main.cpp
TP3_exo2_triangle_couleurs/shaders/: 3D.vs.glsl  normals.fs.glsl
TP4/: main.cpp
TP5/: main.cpp
TP6/: main.cpp
TP7/: main.cpp
TP8/: main.cpp
assets/models/: EREN.mtl  Girl_1.mtl  barque.mtl  butterfly.mtl  chiamaia.mtl  cloud.mtl  cone.mtl  coneAntenne.mtl  ile.mtl  ladybug.mtl  pirate.mtl  skeleton2.mtl  titan.mtl  trees.mtl
src/: main.cpp  math.cpp
src-common/: default_shader.cpp  default_shader.hpp
src-common/glimac/: Cone.cpp  FreeflyCamera.cpp  FreeflyCamera.hpp  Sphere.cpp  Sphere.hpp  TrackballCamera.hpp  common.hpp  cone_vertices.cpp  cone_vertices.hpp  sphere_vertices.cpp
src/boids/: boids.cpp  boids.hpp
src/model/: 3Dmodel.cpp  3Dmodel.hpp  model.cpp  model.hpp
src/person/: person.cpp  person.hpp
src/probability/: elementdecor.cpp  elementdecor.hpp  proba.cpp  proba.hpp
src/scene/: camera.hpp  cube.cpp  cube.hpp  lights.cpp  lights.hpp  loadShader.hpp
src/shaders/: 3D.vs.glsl  lights.fs.glsl  normals.fs.glsl  text3D.fs.glsl
src/tools/: vbovao.hpp
